test/Fail/Issue2487/e.agda
{-# OPTIONS --two-level --no-sized-types --no-guardedness #-}
module Issue2487.e where

postulate admit : {A : Set} -> A
